feat: implementacion del modulo de pacientes, 3 endpoints alta, delete y lista, optimizacion de logs y manejo de errores